--- a/assets/css/minibar.virtual.css
+++ b/assets/css/minibar.virtual.css
@@ -12,7 +12,7 @@
     width: 100%;
     height: 70px;
     background-color: #2C2D34;
-    color: #fff;
+    color: #efefef;
 }
 
 .topbar-nav .brand img {
@@ -27,7 +27,7 @@
 .topbar-nav .toggle-menu {
     margin-left: auto;
     background-color: transparent;
-    color: #fff;
+    color: #efefef;
     outline: none;
     -webkit-transition: all .3s ease;
     transition: all .3s ease;
@@ -100,7 +100,7 @@
 .main-menu .menu-link:hover,
 .main-menu .active .menu-link {
     background-color: #52565c;
-    color: #fff;
+    color: #efefef;
 }
 
 @media (min-width: 600px) {
@@ -199,14 +199,14 @@
 
 .filterable-button .btn:hover {
     background-color: #747474;
-    color: #fff;
+    color: #efefef;
 }
 
 .filterable-button .btn.selected,
 .filterable-button .btn:focus {
     background-color: #747474;
-    color: #fff;
-    box-shadow: 0 0 0 2px #fff, 0 0 0 4px #747474;
+    color: #efefef;
+    box-shadow: 0 0 0 2px #efefef, 0 0 0 4px #747474;
 }
 
 /* Testimonial */
@@ -240,7 +240,7 @@
     width: 100%;
     max-width: 550px;
     height: 400px;
-    color: #fff;
+    color: #efefef;
     text-align: center;
 }
 
@@ -252,14 +252,14 @@
     line-height: 60px;
     font-size: 32px;
     background-color: #52565c;
-    color: #fff;
+    color: #efefef;
     border-radius: 50%;
 }
 
 .testi-carousel .item h4 {
     display: block;
     width: 100%;
-    color: #fff;
+    color: #efefef;
 }
 
 /* Timeline */
@@ -298,7 +298,7 @@
     width: 18px;
     height: 18px;
     background-color: #747474;
-    border: 3px solid #fff;
+    border: 3px solid #efefef;
     border-radius: 50%;
 }
 
@@ -306,7 +306,7 @@
     width: 150px;
     padding: 6px 20px;
     background-color: #747474;
-    color: #fff;
+    color: #efefef;
     font-weight: 500;
     border-radius: 30px 0 60px 30px;
 }
@@ -358,7 +358,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(255,255,255,0.8), #fff);
+    background: linear-gradient(rgba(255,255,255,0.8), #efefef);
     z-index: 2;
 }
 
@@ -414,7 +414,7 @@
 
 .page-service .card .iconic {
     font-size: 40px;
-    color: #fff;
+    color: #efefef;
 }
 
 .page-service .card .btn-theme {
@@ -438,7 +438,7 @@
     margin: 2rem auto;
     max-width: 320px;
     border: 0;
-    background-color: #fff;
+    background-color: #efefef;
     -webkit-transition: box-shadow .3s ease;
        -moz-transition: box-shadow .3s ease;
             transition: box-shadow .3s ease;
@@ -510,7 +510,7 @@
 
 .tag-lists li a:hover {
     background-color: #8e9399;
-    color: #fff;
+    color: #efefef;
 }
 
 /* Share */
@@ -529,13 +529,13 @@
     text-align: center;text-decoration: none;
     line-height: 35px;
     font-size: 12px;
-    background-color: #fff;
+    background-color: #efefef;
     border: 1px solid #ddd;
 }
 
 .sharer .sharer-link:hover {
     background-color: #fd7e14;
-    color: #fff;
+    color: #efefef;
     border-color: transparent;
 }
 
@@ -576,7 +576,7 @@
 .vg-footer .list-unstyled li {
     margin-bottom: 6px;
     font-size: 21px;
-    color: #fff;
+    color: #efefef;
 }
 
 .vg-footer .form-control {
@@ -615,8 +615,8 @@
 .theme-red .filterable-button .btn.selected,
 .theme-red .filterable-button .btn:focus {
     background-color: #EF3724;
-    color: #fff;
-    box-shadow: 0 0 0 2px #fff, 0 0 0 4px #EF3724;
+    color: #efefef;
+    box-shadow: 0 0 0 2px #efefef, 0 0 0 4px #EF3724;
 }
 
 .theme-red .timeline li:first-child .title {
@@ -650,8 +650,8 @@
 .theme-blue .filterable-button .btn.selected,
 .theme-blue .filterable-button .btn:focus {
     background-color: #2960f7;
-    color: #fff;
-    box-shadow: 0 0 0 2px #fff, 0 0 0 4px #2960f7;
+    color: #efefef;
+    box-shadow: 0 0 0 2px #efefef, 0 0 0 4px #2960f7;
 }
 
 .theme-blue .timeline li:first-child .title {
@@ -690,8 +690,8 @@
 .theme-green .filterable-button .btn.selected,
 .theme-green .filterable-button .btn:focus {
     background-color: #8cc63f;
-    color: #fff;
-    box-shadow: 0 0 0 2px #fff, 0 0 0 4px #8cc63f;
+    color: #efefef;
+    box-shadow: 0 0 0 2px #efefef, 0 0 0 4px #8cc63f;
 }
 
 .theme-green .timeline li:first-child .title {
@@ -730,8 +730,8 @@
 .theme-orange .filterable-button .btn.selected,
 .theme-orange .filterable-button .btn:focus {
     background-color: #fd7e14;
-    color: #fff;
-    box-shadow: 0 0 0 2px #fff, 0 0 0 4px #fd7e14;
+    color: #efefef;
+    box-shadow: 0 0 0 2px #efefef, 0 0 0 4px #fd7e14;
 }
 
 .theme-orange .timeline li:first-child .title {
@@ -759,39 +759,39 @@
 
 /* Theme Purple */
 .theme-purple .topbar-nav .toggle-menu:hover {
-    color: #6f42c1;
+    color: #5a49e3;
 }
 
 .theme-purple .main-menu .menu-link:hover,
 .theme-purple .main-menu .active .menu-link {
-    background-color: #6f42c1;
+    background-color: #5a49e3;
 }
 
 .theme-purple .filterable-button .btn.selected,
 .theme-purple .filterable-button .btn:focus {
-    background-color: #6f42c1;
-    color: #fff;
-    box-shadow: 0 0 0 2px #fff, 0 0 0 4px #6f42c1;
+    background-color: #5a49e3;
+    color: #efefef;
+    box-shadow: 0 0 0 2px #efefef, 0 0 0 4px #5a49e3;
 }
 
 .theme-purple .timeline li:first-child .title {
-    background-color: #6f42c1;
+    background-color: #5a49e3;
 }
 
 .theme-purple .timeline li:first-child::before {
-    background-color: #6f42c1;
-    box-shadow: 0 0 0 2px #6f42c1;
+    background-color: #5a49e3;
+    box-shadow: 0 0 0 2px #5a49e3;
 }
 
 .theme-purple .testi-carousel .item .iconic {
-    background-color: #6f42c1;
+    background-color: #5a49e3;
 }
 
 .theme-purple .page-home .caption .tagline {
     background-color: #e1d4fa;
-    color: #6f42c1;
+    color: #5a49e3;
 }
 
 .theme-purple .post-grid .post-category {
-    color: #6f42c1;
+    color: #5a49e3;
 }
