--- a/assets/css/topbar.virtual.css
+++ b/assets/css/topbar.virtual.css
@@ -40,14 +40,14 @@
 
 .filterable-button .btn:hover {
   background-color: #747474;
-  color: #fff;
+  color: #efefef;
 }
 
 .filterable-button .btn.selected,
 .filterable-button .btn:focus {
   background-color: #747474;
-  color: #fff;
-  box-shadow: 0 0 0 2px #fff, 0 0 0 4px #747474;
+  color: #efefef;
+  box-shadow: 0 0 0 2px #efefef, 0 0 0 4px #747474;
 }
 
 
@@ -103,7 +103,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  color: #fff;
+  color: #efefef;
   z-index: 10;
 }
 
@@ -131,7 +131,7 @@
   line-height: 45px;
   text-align: center;
   border-radius: 50%;
-  color: #fff;
+  color: #efefef;
   font-size: 21px;
   cursor: pointer;
   z-index: 10;
@@ -139,7 +139,7 @@
 
 
 .page-about {
-  background-color: #fff;
+  background-color: #efefef;
 }
 
 .page-about .img-place {
@@ -195,7 +195,7 @@
   width: 18px;
   height: 18px;
   background-color: #747474;
-  border: 3px solid #fff;
+  border: 3px solid #efefef;
   border-radius: 50%;
 }
 
@@ -203,7 +203,7 @@
   width: 150px;
   padding: 6px 20px;
   background-color: #747474;
-  color: #fff;
+  color: #efefef;
   font-weight: 500;
   border-radius: 30px 0 60px 30px;
 }
@@ -229,13 +229,13 @@
 }
 
 .page-service {
-  background-color: #fff;
+  background-color: #efefef;
 }
 
 .card-service {
   margin: 16px auto;
   padding: 20px;
-  background-color: #fff;
+  background-color: #efefef;
   border: 0;
 }
 
@@ -261,7 +261,7 @@
 .page-funfact {
   padding: 100px 0;
   text-align: center;
-  color: #fff;
+  color: #efefef;
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
@@ -327,7 +327,7 @@
 
 .page-client {
   background-color: #171925;
-  color: #fff;
+  color: #efefef;
 }
 
 .page-client .row .item {
@@ -373,7 +373,7 @@
 
 
 .page-blog {
-  background-color: #fff;
+  background-color: #efefef;
 }
 
 .post-grid {
@@ -384,7 +384,7 @@
   margin: 2rem auto;
   max-width: 320px;
   border: 0;
-  background-color: #fff;
+  background-color: #efefef;
   -webkit-transition: box-shadow .3s ease;
   -moz-transition: box-shadow .3s ease;
   transition: box-shadow .3s ease;
@@ -436,7 +436,7 @@
 
 
 .page-contact {
-  background-color: #fff;
+  background-color: #efefef;
 }
 
 .vg-maps {
@@ -469,7 +469,7 @@
 .vg-footer .list-unstyled li {
   margin-bottom: 6px;
   font-size: 21px;
-  color: #fff;
+  color: #efefef;
 }
 
 .vg-footer .form-control {
@@ -504,8 +504,8 @@
 .theme-red .filterable-button .btn.selected,
 .theme-red .filterable-button .btn:focus {
   background-color: #EF3724;
-  color: #fff;
-  box-shadow: 0 0 0 2px #fff, 0 0 0 4px #EF3724;
+  color: #efefef;
+  box-shadow: 0 0 0 2px #efefef, 0 0 0 4px #EF3724;
 }
 
 .theme-red .page-about .img-place::before {
@@ -530,8 +530,8 @@
 .theme-blue .filterable-button .btn.selected,
 .theme-blue .filterable-button .btn:focus {
   background-color: #2960f7;
-  color: #fff;
-  box-shadow: 0 0 0 2px #fff, 0 0 0 4px #2960f7;
+  color: #efefef;
+  box-shadow: 0 0 0 2px #efefef, 0 0 0 4px #2960f7;
 }
 
 .theme-blue .page-home .badge {
@@ -565,8 +565,8 @@
 .theme-green .filterable-button .btn.selected,
 .theme-green .filterable-button .btn:focus {
   background-color: #8cc63f;
-  color: #fff;
-  box-shadow: 0 0 0 2px #fff, 0 0 0 4px #8cc63f;
+  color: #efefef;
+  box-shadow: 0 0 0 2px #efefef, 0 0 0 4px #8cc63f;
 }
 
 .theme-green .page-home .badge {
@@ -600,8 +600,8 @@
 .theme-orange .filterable-button .btn.selected,
 .theme-orange .filterable-button .btn:focus {
   background-color: #fd7e14;
-  color: #fff;
-  box-shadow: 0 0 0 2px #fff, 0 0 0 4px #fd7e14;
+  color: #efefef;
+  box-shadow: 0 0 0 2px #efefef, 0 0 0 4px #fd7e14;
 }
 
 .theme-orange .page-home .badge {
@@ -629,34 +629,34 @@
 /* Theme Purple */
 .theme-purple .badge-subhead  {
   background-color: rgba(110, 66, 193, 0.15);
-  color: #6f42c1;
+  color: #5a49e3;
 }
 
 .theme-purple .filterable-button .btn.selected,
 .theme-purple .filterable-button .btn:focus {
-  background-color: #6f42c1;
-  color: #fff;
-  box-shadow: 0 0 0 2px #fff, 0 0 0 4px #6f42c1;
+  background-color: #5a49e3;
+  color: #efefef;
+  box-shadow: 0 0 0 2px #efefef, 0 0 0 4px #5a49e3;
 }
 
 .theme-purple .page-home .badge {
   background-color: rgba(98, 47, 192, 0.15);
-  color: #6f42c1;
+  color: #5a49e3;
 }
 
 .theme-purple .page-about .img-place::before {
-  border-color: #6f42c1;
+  border-color: #5a49e3;
 }
 
 .theme-purple .timeline li:first-child .title {
-  background-color: #6f42c1;
+  background-color: #5a49e3;
 }
 
 .theme-purple .timeline li:first-child::before {
-  background-color: #6f42c1;
-  box-shadow: 0 0 0 2px #6f42c1;
+  background-color: #5a49e3;
+  box-shadow: 0 0 0 2px #5a49e3;
 }
 
 .theme-purple .post-grid .post-category {
-  color: #6f42c1;
+  color: #5a49e3;
 }
